--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,13 +10,20 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$blue: #03a9f4 !default;
+$blue: #00a8ff !default;
 $indigo: #3f51b5 !default;
-$purple: #673ab7 !default;
+$purple: #9c88ff !default;
 $pink: #e91e63 !default;
-$red: #f44336 !default;
-$orange: #ff5722 !default;
-$yellow: #ffab00 !default;
-$green: #8bc34a !default;
+$red: #c23616 !default;
+$orange: #e84118 !default;
+$yellow: #fbc531 !default;
+$green: #4cd137 !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
+
+$theme-light: #273c75;
+$theme-dark: #192a56;
+
+$blue-nights: #353b48;
+$electromagnetic: #2f3640;
+
