--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -62,12 +62,36 @@ $link-hover-decoration: none !default;
 @import './fonts.scss';
 
 // Navbar
-$navbar-light-color:                rgba($theme-light, 1) !default;
-$navbar-light-hover-color:          rgba($theme-dark, .7) !default;
-$navbar-light-active-color:         rgba($theme-dark, .9) !default;
-$navbar-light-disabled-color:       rgba($theme-dark, .3) !default;
-$navbar-light-toggler-border-color: $theme-dark;
 
+.custom-navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+.custom-navbar-brand:hover, .navbar-brand:focus {
+  text-decoration: none;
+}
+
+.custom-navbar-homepage {
+  color: rgba($royal-yellow, 1);
+}
+
+.custom-navbar-homepage:hover, .custom-navbar-homepage:active {
+  color: yellow;
+}
+
+.custom-navbar-not-homepage {
+  color: rgba($royal-blue, 1);
+}
+
+.custom-navbar-not-homepage:hover, .custom-navbar-not-homepage:active {
+  color: darken($royal-blue, 10%);
+}
 
 //Cards
 $card-border-color: transparent !default;
@@ -704,5 +728,5 @@ footer a {
   color: $white;
 }
 footer a:active, footer a:hover {
-  color: $pink;
+  color: $royal-yellow;
 }
