Adding some content

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -21,11 +21,7 @@ $green: #4cd137 !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
 
-$theme-light: #273c75;
-$theme-dark: #192a56;
+$theme-color: #006ac3;
+$theme-accent: #fedf01;
 
-$blue-nights: #353b48;
-$electromagnetic: #2f3640;
-
-$royal-blue: #006ac3;
-$royal-yellow: #fedf01;
+$text-color: #353b48;
