Added fees page

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -8,6 +8,7 @@
 //
 @import './colors.scss';
 @import './code-area.scss';
+@import './fees.scss';
 
 // Reassign color vars to semantic color scheme
 $theme-colors: (
