Work in progress

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -112,8 +112,9 @@ $link-hover-decoration: none !default;
 
 //Cards
 $card-border-color: transparent !default;
+$card-bg: transparent;
 
-//List-Group
+  //List-Group
 $list-group-border-color: transparent;
 $list-group-item-padding-y:  .5rem !default;
 
