Work in progress in Address Page

--- a/src/components/tx-page.scss
+++ b/src/components/tx-page.scss
@@ -39,6 +39,7 @@
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     color: $gray-600;
+    margin-top: 2rem;
 }
 
 .tx-input-and-output-table {
