--- a/src/components/tx-page.scss
+++ b/src/components/tx-page.scss
@@ -34,13 +34,34 @@
 
 /* Inputs and Outputs table */
 
+.transaction-card {
+    margin: 1.5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid #dee2e6;
+
+
+}
+
+.transaction-subtitle {
+    color: $theme-color;
+    word-break: break-word;
+
+}
 .inputs-and-outputs-subtitle {
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     color: $gray-600;
-    margin-top: 2rem;
 }
+
+@media only screen and (max-width: 960px) {
+    .inputs-and-outputs-subtitle {
+        margin-top: 1rem;
+    }
+}
+
+
 
 .tx-input-and-output-table {
     background: #eff0f1;
@@ -86,3 +107,6 @@
     word-break: break-word;
 }
 
+.hl-input-and-output-cell {
+    background-color: lighten($theme-color, 50%) !important;
+}
