Some work in homepage

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -21,7 +21,13 @@ $green: #4cd137 !default;
 $teal: #009688 !default;
 $cyan: #00bcd4 !default;
 
-$theme-color: #006ac3;
-$theme-accent: #fedf01;
+$theme-color: #3D91F9;
+$theme-accent: #18dcff;
 
 $text-color: #353b48;
+
+
+$bg: #3D91F9;
+$light-gray: #c8d6e5;
+$neon-blue: #18dcff;
+$wintergreen: #32ff7e;
