--- a/src/components/explore.scss
+++ b/src/components/explore.scss
@@ -4,7 +4,7 @@
   background-color: $theme-color;
   margin: -2rem -7rem 2rem;
   padding: 2rem 7rem;
-  color: $theme-accent;
+  color: #fff;
 }
 
 .explore-header > h2 {
