--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -9,11 +9,14 @@
 @import './colors.scss';
 @import './code-area.scss';
 @import './fees.scss';
+// Fonts
+//
+@import './fonts.scss';
 
 // Reassign color vars to semantic color scheme
 $theme-colors: (
-        primary: $theme-color,
-        secondary: $theme-accent,
+        primary: $neon-blue,
+        secondary: $wintergreen,
         success: $green,
         info: $cyan,
         warning: $yellow,
@@ -22,7 +25,47 @@ $theme-colors: (
         dark: $text-color,
 ) !default;
 
-// Options
+// Buttons
+
+.btn-primary, .btn-secondary {
+  color: #fff !important;
+}
+
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius:           .3rem !default;
+$btn-border-radius-lg:        1.5rem !important;
+$btn-border-radius-sm:        .25rem !default;
+
+/* Default Bootstrap values for reference:
+$border-radius:               .25rem !default;
+$border-radius-lg:            .3rem !default;
+$border-radius-sm:            .2rem !default;
+*/
+
+// Button padding
+
+$btn-padding-x:               1rem;
+
+$btn-padding-x-sm:            0.75rem;
+
+$btn-padding-x-lg:            1.5rem !default;
+
+/* Default Bootstrap values for reference:
+$input-btn-padding-y:         .375rem !default;
+$input-btn-padding-x:         .75rem !default;
+
+$input-btn-padding-y-sm:      .25rem !default;
+$input-btn-padding-x-sm:      .5rem !default;
+
+$input-btn-padding-y-lg:      .5rem !default;
+$input-btn-padding-x-lg:      1rem !default;
+
+*/
+
+
+
+  // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
 $enable-rounded: true !default;
@@ -59,55 +102,7 @@ $inverse-color: $gray-600 !default;
 $link-decoration: none !default;
 $link-hover-decoration: none !default;
 
-// Fonts
-//
-@import './fonts.scss';
 
-// Navbar
-
-.custom-navbar-brand {
-  display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 0.1rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap;
-}
-
-.custom-navbar-brand:hover, .navbar-brand:focus {
-  text-decoration: none;
-}
-
-.custom-navbar-homepage {
-  color: rgba($theme-accent, 1);
-}
-
-.custom-navbar-homepage.custom-navbar-brand{
-  font-size: 1.8rem;
-}
-
-.custom-navbar-homepage:hover, .custom-navbar-homepage:active {
-  color: yellow;
-}
-
-.custom-navbar-not-homepage {
-  color: rgba($theme-color, 1);
-}
-
-.custom-navbar-not-homepage:hover, .custom-navbar-not-homepage:active {
-  color: darken($theme-color, 10%);
-}
-
-.logo-homepage {
-  max-height: 40px;
-  margin: 0 0.3rem 0 0;
-}
-
-.logo-not-homepage {
-  max-height: 35px;
-  margin: 0 0.3rem 0 0;
-}
 
 
 //Cards
@@ -356,7 +351,7 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: $theme-color;
+  color: $bg;
   font-family: 'Nunito', sans-serif;
   font-weight: 700;
   text-rendering: optimizeLegibility;
@@ -748,13 +743,13 @@ pre tt:after {
 
 // Footer
 footer {
-  background: $theme-color;
+  background: $bg;
 }
 footer a {
   color: $white;
 }
 footer a:active, footer a:hover {
-  color: $theme-accent;
+  color: $neon-blue;
 }
 
 // Anchor Link to section
@@ -767,7 +762,7 @@ footer a:active, footer a:hover {
 
 .anchor-section:hover {
   opacity: 1;
-  color: $theme-color;
+  color: $bg;
 }
 
 .anchor-section:focus {
